[package]
name = "ahc014"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.3", features = ["derive"] }
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_distr = "=0.2.2"
rand_pcg = "=0.2.1"
